--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/webplatformz/jass-bot-registry#readme",
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "body-parser": "1.15.2",
     "express": "4.14.0"
   }
 }
