--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/webplatformz/jass-bot-registry#readme",
   "dependencies": {
     "body-parser": "1.15.2",
-    "express": "4.14.0"
+    "express": "4.14.0",
+    "mongodb": "2.1.18"
   }
 }
