--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "jass-bot-registry",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "engines": {
+    "node": ">=6.2"
+  },
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
