Added start watch task.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "start:watch": "nodemon -e js --exec \"npm run start\""
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,9 @@
     "url": "https://github.com/webplatformz/jass-bot-registry/issues"
   },
   "homepage": "https://github.com/webplatformz/jass-bot-registry#readme",
+  "devDependencies": {
+    "nodemon": "1.9.2"
+  },
   "dependencies": {
     "body-parser": "1.15.2",
     "express": "4.14.0",
