Started separating router and server code.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "npm install",
     "start": "node server.js",
     "start:watch": "nodemon -e js --exec \"npm run start\""
   },
